[gd_scene load_steps=11 format=2]

[ext_resource path="res://LaserEnemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/fly1.png" type="Texture" id=2]
[ext_resource path="res://LaserBeam.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/explode2.png" type="Texture" id=4]
[ext_resource path="res://Assets/explode.png" type="Texture" id=5]
[ext_resource path="res://Assets/fly2.png" type="Texture" id=6]
[ext_resource path="res://Assets/explode1.png" type="Texture" id=7]
[ext_resource path="res://Assets/fly3.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 8 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "explode",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48.2576, 34.7541 )

[node name="LaserEnemy" type="Node2D"]
script = ExtResource( 1 )

[node name="FlyingEnemy" type="KinematicBody2D" parent="."]
collision_layer = 2
collision_mask = 5

[node name="Position2D" type="Position2D" parent="FlyingEnemy"]
position = Vector2( 0.815814, 28.199 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="FlyingEnemy"]
frames = SubResource( 1 )
animation = "idle"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlyingEnemy"]
position = Vector2( 0.853531, 13.2324 )
shape = SubResource( 2 )

[node name="MoveTween" type="Tween" parent="."]
repeat = true
playback_process_mode = 0
playback/repeat = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="dead" type="AudioStreamPlayer2D" parent="."]
max_distance = 6000.0

[node name="Timer2" type="Timer" parent="."]
autostart = true

[node name="LaserBeam" parent="." instance=ExtResource( 3 )]
position = Vector2( 3.27229, 39.5278 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
